Added a working contextmenu without functionality

--- a/settings.ini
+++ b/settings.ini
@@ -3,4 +3,4 @@ recent=data/enoden.csv, data/default.csv
 slow_fade=0.03
 med_fade=0.1
 fast_fade=0.3
-mostRecent=C:\xampp\htdocs\soundcontrol\data\default.csv
+mostRecent=C:\xampp\htdocs\soundcontrol\data\enoden.csv
