--- a/settings.ini
+++ b/settings.ini
@@ -1,6 +1,6 @@
 background=img/bg.jpg
-recent=data/enoden.csv, data/default.csv
+recent=data/enoden.tsv, data/default.tsv
 slow_fade=0.03
 med_fade=0.1
 fast_fade=0.3
-mostRecent=C:\xampp\htdocs\soundcontrol\data\default.csv
+mostRecent=C:\xampp\htdocs\soundcontrol\data\default.tsv
