--- a/settings.ini
+++ b/settings.ini
@@ -1,5 +1,5 @@
 background=img/bg.jpg
-recent=data/enoden.tsv, data/default.tsv
+recent=data/default.tsv
 slow_fade=0.03
 med_fade=0.1
 fast_fade=0.3
